[tool.poetry]
name = "research"
version = "0.1.0"
description = "My humble collection of research papers"
authors = ["smnai"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
arxiv = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
